# wasm-repro

./: .bazelrc  .gitignore  MODULE.bazel  README.md  convert.bzl  convert.py  generate_cargo_lock.py  go.mod  main.go
java/: Readme.md  pom.xml
java/perf-test/: bench.sh  test
java/src/main/java-templates/org/acme/: WasmResource.java
java/src/main/java/org/acme/: Main.java  Toml2Json.java
toml2json/: Cargo.toml  build.sh  toml2json.wasm
toml2json/src/: lib.rs
wasmtime/: Cargo.toml
wasmtime/src/: main.rs
